--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,9 @@
-API_TOKEN=your-read-only-personnal-token
-SEARCH_KEYWORD=your text to find
-# optionnal
-SEARCH_FILE_EXTENSION=ext
+
+GITLAB_HOST=https://gitlab.com
+GITLAB_TOKEN=your-read-only-personnal-token
+# pause time in ms between search api call (6000 is recommanded on official Gitlab instance)
+SEARCH_DELAY=6000
+# File pattern filter (eg. *.php)
+SEARCH_FILE_PATTERN=*
+# string to find
+SEARCH_KEYWORD=foobar
