add search on group id

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,6 @@ SEARCH_DELAY=6000
 SEARCH_FILE_PATTERN=*
 # string to find
 SEARCH_KEYWORD=foobar
+# Group ID to search in
+# default search in all groups
+GROUP_ID=
