--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "author": "Mathieu Delestre",
   "license": "MIT",
   "scripts": {
-    "search": "node src/search.js",
-    "replace": "node src/replace.js"
+    "search": "node src/search.js"
   },
   "dependencies": {
-    "@gitbeaker/node": "^35.4.0",
+    "@gitbeaker/rest": "^40.1.2",
     "axios": "^0.25.0",
     "axios-rate-limit": "^1.3.0",
     "dotenv": "^16.0.0",
