--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gitlab-finder",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/search.js",
   "author": "Mathieu Delestre",
   "license": "MIT",
   "scripts": {
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@gitbeaker/rest": "^40.1.2",
-    "axios": "^0.25.0",
-    "axios-rate-limit": "^1.3.0",
-    "dotenv": "^16.0.0",
-    "slugify": "^1.6.5"
+    "axios": "^1.7.2",
+    "axios-rate-limit": "^1.4.0",
+    "dotenv": "^16.4.5",
+    "slugify": "^1.6.6"
+  },
+  "volta": {
+    "node": "20.12.1"
   }
 }
