add subgroup option for the group search

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,6 @@ SEARCH_KEYWORD=foobar
 # Group ID to search in
 # default search in all groups
 GROUP_ID=
+# Whether to include subgroups when Group ID is indicated
+# default to false
+INCLUDE_SUBGROUPS=false
