feat(cli): cli-style interface

--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,13 @@
 
 GITLAB_HOST=https://gitlab.com
 GITLAB_TOKEN=your-read-only-personnal-token
-# pause time in ms between search api call (6000 is recommanded on official Gitlab instance)
-SEARCH_DELAY=6000
-# File pattern filter (eg. *.php)
-SEARCH_FILE_PATTERN=*
-# string to find
-SEARCH_KEYWORD=foobar
-# Group ID to search in
-# default search in all groups
-GROUP_ID=
-INCLUDE_SUBGROUP=false
+
+# -- pause time in ms between search api call (6000 is recommanded on official Gitlab instance)
+# SEARCH_DELAY=6000
+# -- File pattern filter (eg. *.php)
+# SEARCH_FILE_PATTERN=*
+# -- string to find
+# SEARCH_KEYWORD=foobar
+# -- Group ID to search in (default search in all groups)
+# GROUP_ID=123456789
+# INCLUDE_SUBGROUP=false
