--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@gitbeaker/rest": "^42.1.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "axios-rate-limit": "^1.4.0",
+    "commander": "^13.1.0",
     "dotenv": "^16.4.7",
     "slugify": "^1.6.6"
   },
